corrected text-alignment of images in the carousel

--- a/client/src/components/ImageGallery/ImageGallery.css
+++ b/client/src/components/ImageGallery/ImageGallery.css
@@ -1,4 +1,6 @@
-
+.carousel {
+  text-align: center;
+}
 
 .styleImage {
   width: 200px;
